# yast-slp

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  configure.in.in  yast2-slp.spec.in
.github/workflows/: ci.yml
agent-slp/: Makefile.am
agent-slp/conf/: Makefile.am  slp.scr
agent-slp/doc/: Makefile.am  TODO.txt  slp.html
agent-slp/doc/autodocs/: Makefile.am
agent-slp/src/: .cvsignore  Makefile.am  SlpAgent.cc  SlpAgent.h  slp.rb  slp.ycp  slp_debug.h
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-slp.changes  yast2-slp.spec
src/: Makefile.am  SLP.ycp  SlpAgent.cc  Y2CCSlpAgent.cc  slp.desktop  slp.ycp
src/clients/: slp.rb
src/lib/slp/dialogs/: service_selection.rb
src/modules/: SLP.rb  SlpService.rb
test/: Makefile.am  slp_service_test.rb  spec_helper.rb
test/dialogs/: service_selection_test.rb
testsuite/: Makefile.am  README
